# learning-gstreamer

./: .gitignore  Cargo.toml  README.md  install.sh
markdown/: what_i_know.md
src/: main.rs
