[package]
name = "learning-gstreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gstreamer = "0.21.0"
gstreamer-app = "0.21.0"
gstreamer-audio = "0.21.0"
gstreamer-video = "0.21.0"
log = "0.4.20"
